# gameUPH

./: CMakeLists.txt  README.md  Sprites.h  main.c
include/: function.h  settings.h  sprites.h  structs.h  vars.h
src/: game.c  input.c  render.c  sprites.c
